--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,8 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Trabajo práctico - Programación 1</display-name>
+  	<welcome-file-list>
+		<welcome-file>login</welcome-file>
+	</welcome-file-list>
 </web-app>
